force-app/main/default/objects/Vehicle__c/fields/Account_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Account_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicle</relationshipLabel>
    <relationshipName>Vehicle</relationshipName>
    <type>Lookup</type>
</CustomField>