force-app/main/default/objects/Vehicle__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vehicle (Agency)</relationshipLabel>
    <relationshipName>Vehicle1</relationshipName>
    <type>Lookup</type>
</CustomField>