force-app/main/default/objects/Vehicle__c/fields/Business_Country__c.field-meta.xml
<CustomField>
    <fullName>Business_Country__c</fullName>
    <label>Business Country</label>
    <type>TextArea</type>
</CustomField>