force-app/main/default/objects/Vehicle__c/fields/Business_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Business_Postal_Code__c</fullName>
    <label>Business Postal Code</label>
    <type>TextArea</type>
</CustomField>