force-app/main/default/objects/Vehicle__c/fields/Business_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Business_State_Province__c</fullName>
    <label>Business State/Province</label>
    <type>TextArea</type>
</CustomField>