force-app/main/default/objects/Vehicle__c/fields/Company_State__c.field-meta.xml
<CustomField>
    <fullName>Company_State__c</fullName>
    <label>Company State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>