force-app/main/default/objects/Vehicle__c/fields/Company_Zip__c.field-meta.xml
<CustomField>
    <fullName>Company_Zip__c</fullName>
    <label>Company Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>