force-app/main/default/objects/Vehicle__c/fields/Deleted_vehicle__c.field-meta.xml
<CustomField>
    <fullName>Deleted_vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted vehicle</label>
    <type>Checkbox</type>
</CustomField>