force-app/main/default/objects/Vehicle__c/fields/Domestic_Insurance_Name__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Insurance_Name__c</fullName>
    <label>Domestic Insurance Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>