force-app/main/default/objects/Vehicle__c/fields/Domestic_Insurance_Phone__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Insurance_Phone__c</fullName>
    <label>Domestic Insurance Phone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>