force-app/main/default/objects/Vehicle__c/fields/Domestic_Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Insurance_Policy__c</fullName>
    <label>Domestic Insurance Policy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>