force-app/main/default/objects/Vehicle__c/fields/Is_Account_Company_Named__c.field-meta.xml
<CustomField>
    <fullName>Is_Account_Company_Named__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Account Company Named</label>
    <type>Checkbox</type>
</CustomField>