force-app/main/default/objects/Vehicle__c/fields/Is_Lienholder__c.field-meta.xml
<CustomField>
    <fullName>Is_Lienholder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Lienholder</label>
    <type>Checkbox</type>
</CustomField>