force-app/main/default/objects/Vehicle__c/fields/Is_the_vehicle_registered_to_a_business__c.field-meta.xml
<CustomField>
    <fullName>Is_the_vehicle_registered_to_a_business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the vehicle registered to a business</label>
    <type>Checkbox</type>
</CustomField>