force-app/main/default/objects/Vehicle__c/fields/Is_the_vehicle_used_for_business_purpose__c.field-meta.xml
<CustomField>
    <fullName>Is_the_vehicle_used_for_business_purpose__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the vehicle used for business purpose</label>
    <type>Checkbox</type>
</CustomField>