force-app/main/default/objects/Vehicle__c/fields/Is_there_a_driver_under_21__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_driver_under_21__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is there a driver under 21</label>
    <type>Checkbox</type>
</CustomField>