force-app/main/default/objects/Vehicle__c/fields/Is_vehicle_owned_by_a_company_or_rented__c.field-meta.xml
<CustomField>
    <fullName>Is_vehicle_owned_by_a_company_or_rented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is vehicle owned by a company or rented?</label>
    <type>Checkbox</type>
</CustomField>