force-app/main/default/objects/Vehicle__c/fields/Lienholder_City__c.field-meta.xml
<CustomField>
    <fullName>Lienholder_City__c</fullName>
    <label>Lienholder City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>