force-app/main/default/objects/Vehicle__c/fields/Lienholder_Country__c.field-meta.xml
<CustomField>
    <fullName>Lienholder_Country__c</fullName>
    <label>Lienholder Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>