force-app/main/default/objects/Vehicle__c/fields/Lienholder_Fax__c.field-meta.xml
<CustomField>
    <fullName>Lienholder_Fax__c</fullName>
    <label>Lienholder Fax</label>
    <type>Phone</type>
</CustomField>