force-app/main/default/objects/Vehicle__c/fields/Lienholder_name__c.field-meta.xml
<CustomField>
    <fullName>Lienholder_name__c</fullName>
    <label>Lienholder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>