force-app/main/default/objects/Vehicle__c/fields/Lienholder_Phone__c.field-meta.xml
<CustomField>
    <fullName>Lienholder_Phone__c</fullName>
    <label>Lienholder Phone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>