force-app/main/default/objects/Vehicle__c/fields/Lienholder_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Lienholder_Postal_Code__c</fullName>
    <label>Lienholder Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>