force-app/main/default/objects/Vehicle__c/fields/Lienholder_State__c.field-meta.xml
<CustomField>
    <fullName>Lienholder_State__c</fullName>
    <label>Lienholder State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>