force-app/main/default/objects/Vehicle__c/fields/Lienholder_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Lienholder_Street_2__c</fullName>
    <label>Lienholder Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>