force-app/main/default/objects/Vehicle__c/fields/Lienholder_Street__c.field-meta.xml
<CustomField>
    <fullName>Lienholder_Street__c</fullName>
    <label>Lienholder Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>