force-app/main/default/objects/Vehicle__c/fields/owner_id__c.field-meta.xml
<CustomField>
    <fullName>owner_id__c</fullName>
    <label>owner_id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>