force-app/main/default/objects/Vehicle__c/fields/Policy_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Policy_Expiration__c</fullName>
    <description>From the Policy object, should be updated whenever a new policy, policy edit or renewal is done. If the policy.expiration changes, automatically this field should also change.</description>
    <label>Policy Expiration</label>
    <type>Date</type>
</CustomField>