force-app/main/default/objects/Vehicle__c/fields/Registered_Country__c.field-meta.xml
<CustomField>
    <fullName>Registered_Country__c</fullName>
    <label>Registered Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>