force-app/main/default/objects/Vehicle__c/fields/Registered_Plate__c.field-meta.xml
<CustomField>
    <fullName>Registered_Plate__c</fullName>
    <label>Registered Plate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>