force-app/main/default/objects/Vehicle__c/fields/Registered_State__c.field-meta.xml
<CustomField>
    <fullName>Registered_State__c</fullName>
    <label>Registered State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>