force-app/main/default/objects/Vehicle__c/fields/Rental_Tbd__c.field-meta.xml
<CustomField>
    <fullName>Rental_Tbd__c</fullName>
    <label>Rental Tbd</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>