force-app/main/default/objects/Vehicle__c/fields/Salvage_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Salvage_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salvage Vehicle</label>
    <type>Checkbox</type>
</CustomField>