force-app/main/default/objects/Vehicle__c/fields/Uninsured_Reason__c.field-meta.xml
<CustomField>
    <fullName>Uninsured_Reason__c</fullName>
    <label>Uninsured Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Will Renew Later</fullName>
            </value>
            <value>
                <fullName>Transferred Ownership</fullName>
            </value>
            <value>
                <fullName>Destroyed</fullName>
            </value>
            <value>
                <fullName>Stolen</fullName>
            </value>
            <value>
                <fullName>No Longer in Mexico</fullName>
            </value>
            <value>
                <fullName>Insured Elsewhere</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>