force-app/main/default/objects/Vehicle__c/fields/Updated_At__c.field-meta.xml
<CustomField>
    <fullName>Updated_At__c</fullName>
    <label>Updated_At</label>
    <type>DateTime</type>
</CustomField>