force-app/main/default/objects/Vehicle__c/fields/vehicle_coverage_status__c.field-meta.xml
<CustomField>
    <fullName>vehicle_coverage_status__c</fullName>
    <label>Vehicle Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>insured</fullName>
            </value>
            <value>
                <fullName>insured-annual</fullName>
            </value>
            <value>
                <fullName>uninsured</fullName>
            </value>
            <value>
                <fullName>insured-renew</fullName>
            </value>
            <value>
                <fullName>insured-renew-annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>