force-app/main/default/objects/Vehicle__c/fields/Vehicle_Owner_Address__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Owner_Address__c</fullName>
    <inlineHelpText>Address of vehicle owner</inlineHelpText>
    <label>Vehicle Owner Address</label>
    <type>TextArea</type>
</CustomField>