force-app/main/default/objects/Vehicle__c/fields/Vehicle_Owner_Country__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Owner_Country__c</fullName>
    <label>Vehicle Owner Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>