force-app/main/default/objects/Vehicle__c/fields/Vehicle_Owner_Driver_License__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Owner_Driver_License__c</fullName>
    <label>Vehicle Owner Driver License #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>