force-app/main/default/objects/Vehicle__c/fields/Vehicle_Owner_Driver_Licenses_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Owner_Driver_Licenses_Expiration__c</fullName>
    <label>Vehicle Owner Driver Licenses Expiration</label>
    <type>Date</type>
</CustomField>