force-app/main/default/objects/Vehicle__c/fields/Vehicle_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Owner_Name__c</fullName>
    <label>Vehicle Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>