force-app/main/default/objects/Vehicle__c/fields/Vehicle_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Owner_Phone__c</fullName>
    <label>Vehicle Owner Phone</label>
    <type>Phone</type>
</CustomField>