force-app/main/default/objects/Vehicle__c/fields/Vehicle_Owner_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Owner_Postal_Code__c</fullName>
    <label>Vehicle Owner Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>