force-app/main/default/objects/Vehicle__c/fields/Vehicle_Owner_State__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Owner_State__c</fullName>
    <label>Vehicle Owner State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>