force-app/main/default/objects/Vehicle__c/fields/Vehicle_sub_type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_sub_type__c</fullName>
    <label>Vehicle sub type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>