force-app/main/default/objects/Vehicle__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automobile/Sedan</fullName>
            </value>
            <value>
                <fullName>Pickup Truck w or w/o Camper Shell</fullName>
            </value>
            <value>
                <fullName>SUV</fullName>
            </value>
            <value>
                <fullName>Van</fullName>
            </value>
            <value>
                <fullName>Motorcycle</fullName>
            </value>
            <value>
                <fullName>Street Legal ATV</fullName>
            </value>
            <value>
                <fullName>Motor Home / RV</fullName>
            </value>
            <value>
                <fullName>ATV</fullName>
            </value>
            <value>
                <fullName>Boat</fullName>
            </value>
            <value>
                <fullName>Car/Truck/Auto</fullName>
            </value>
            <value>
                <fullName>Automobile-Van-Minivan</fullName>
            </value>
            <value>
                <fullName>Pick Up</fullName>
            </value>
            <value>
                <fullName>SUV-Crossover</fullName>
            </value>
            <value>
                <fullName>ATV-UTV-Quads-Buggie</fullName>
            </value>
            <value>
                <fullName>Motorhome</fullName>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>