force-app/main/default/objects/Vehicle__c/fields/Vin__c.field-meta.xml
<CustomField>
    <fullName>Vin__c</fullName>
    <label>Vin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>