force-app/main/default/objects/Vehicle__c/fields/Vin_Counter__c.field-meta.xml
<CustomField>
    <fullName>Vin_Counter__c</fullName>
    <label>Vin Counter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>